[tool.poetry]
name = "netmiko_test"
version = "0.1.0"
description = ""
authors = ["zenion <joshstout@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
netmiko = "^4.1.2"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
