[tool.poetry]
authors = ["zenion <joshstout@gmail.com>"]
description = "runs a script file against a pan-os or panorama device"
name = "pan-run-script"
version = "0.1.0"

[tool.poetry.dependencies]
click = "^8.1.3"
netmiko = "^4.1.2"
python = "^3.10"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}
flake8 = "^5.0.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
